dropdown menù inizio

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                   <div class="message"
                   :class=" message.status === 'sent' ? 'mine' : 'not-mine'">{{message.message}}
                   <span class="msg-time little-text me-2 ">{{TimeDate(message.date)}}</span>
+                  <!--dropdown-->
                   </div>
                 </div>
                 <div
