--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
                   :class=" message.status === 'sent' ? 'mine' : 'not-mine'">{{message.message}}
                   <span class="msg-time little-text me-2 ">{{TimeDate(message.date)}}</span>
                   <!--dropdown-->
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><button class="dropdown-item" type="button">Action</button></li>
+                      <li><button class="dropdown-item" type="button">Another action</button></li>
+                      <li><button class="dropdown-item" type="button">Something else here</button></li>
+                    </ul>
+                  </div>
+                <!--stop dropdown-->
                   </div>
                 </div>
                 <div
