--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                   <div class="message"
                   :class=" message.status === 'sent' ? 'mine' : 'not-mine'">{{message.message}}
                   <span class="msg-time little-text me-2 ">{{TimeDate(message.date)}}</span>
+                  <span class="spunteBlu">
+                    <i class="fa-solid fa-check-double"></i>
+                </span>
                   <!--dropdown-->
                   <div class="dropdown ms-2">
                     <i class="fa-solid fa-caret-down" style="cursor:pointer" @click="openOption(index)"></i>
@@ -99,7 +102,9 @@
                 <div
                  v-if="loadList.includes(activeIndex)"
                  class=" message not-mine">
+                 <em>
                   Sta scrivendo...
+                  </em>
                 </div>
               </div>
             </div>
